Implement more missing wamp features
add jspecify for null handling,
fix pmd issues